--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 		"preview": "yarn build && wrangler dev",
 		"postinstall": "nuxt prepare",
 		"deploy": "yarn build && wrangler deploy",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"upgrade-wash": "yarn wash && rimraf yarn.lock",
+		"wash": "rimraf .nuxt .output .wrangler .wrangler dist node_modules worker-configuration.d.ts"
 	},
+	"packageManager": "yarn@1.22.22",
 	"dependencies": {
 		"nuxt": "^3.17.2",
 		"vue": "^3.5.13",
@@ -28,6 +31,5 @@
 		"nitropack": "^2.11.11",
 		"nuxi": "^3.25.1",
 		"wrangler": "^4.14.3"
-	},
-	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+	}
 }
