--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,51 +1,17 @@
-/**
- * For more details on how to configure Wrangler, refer to:
- * https://developers.cloudflare.com/workers/wrangler/configuration/
- */
+//./wrangler.jsonc
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
+	//name this deployed application in the Cloudflare dashboard for Workers & Pages
 	"name": "fujidesktop-app",
-	"main": "./.output/server/index.mjs",
-	"compatibility_date": "2025-05-07",
-	"assets": {
-		"binding": "ASSETS",
-		"directory": "./.output/public/"
-	},
-	"observability": {
-		"enabled": true
-	}
-	/**
-	 * Smart Placement
-	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-	 */
-	// "placement": { "mode": "smart" },
 
-	/**
-	 * Bindings
-	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-	 * databases, object storage, AI inference, real-time communication and more.
-	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
-	 */
+	//only apply Cloudflare runtime features and fixes from before this date
+	"compatibility_date": "2025-06-10",
 
-	/**
-	 * Environment Variables
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-	 */
-	// "vars": { "MY_VARIABLE": "production_value" },
-	/**
-	 * Note: Use secrets to store sensitive data.
-	 * https://developers.cloudflare.com/workers/configuration/secrets/
-	 */
+	//use compatability polyfills for core Node modules; this is about node compatability at *runtime*
+	"compatibility_flags": ["nodejs_compat"],
 
-	/**
-	 * Static Assets
-	 * https://developers.cloudflare.com/workers/static-assets/binding/
-	 */
-	// "assets": { "directory": "./public/", "binding": "ASSETS" },
+	//retain logs in the dashboard
+	"observability": {"enabled": true},
 
-	/**
-	 * Service Bindings (communicate between multiple Workers)
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-	 */
-	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+	//tell our code editor Wrangler's JSON schema for autocomplete and validation
+	"$schema": "node_modules/wrangler/config-schema.json",
 }
